uppdatering av inloggad
fixat footer, att feeden är centrerad och att man kan komma in på profil från inloggad.

--- a/inloggad.css
+++ b/inloggad.css
@@ -144,3 +144,14 @@ body{margin-top:20px;}
   background: #ffffff;
   padding: 10px 15px;
 }
+.footer {
+  position: relative;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #2bbbad;
+  color: white;
+  text-align: center;
+  font-size: 90%;
+  padding: 10px 15px;
+}
