--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1157,9 +1157,10 @@ pre code {
     max-width: 50%;
   }
   .col-md-7 {
-    flex: 0 0 c58.333333%;
+    -ms-flex: 0 0 58.333333%;
+    flex: 0 0 58.333333%;
+    max-width: 58.333333%;
   }
-  
   .col-md-8 {
     -ms-flex: 0 0 66.666667%;
     flex: 0 0 66.666667%;
