Uppdaterat navbar och footer

--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@
 	/*color: #eaeaeb;*/
 	text-align: center;
 	width: 100%;
-	position: fixed;
+	/*position: fixed;*/
   	left: 0;
   	bottom: 0;
   	color: white;
