--- a/profil.css
+++ b/profil.css
@@ -7,26 +7,37 @@ body {
 	margin-bottom: 10px;
 	height: 250px;
 }
-.fb-image-profile {
-	margin: -90px 1120px 0px 600px;
-	z-index: 9;
+.profilbild {
+	margin: -90px 400px 50px 450px;
 	width: 20%;
 	border-radius: 50%;
+	
+	
 }
 .adamoanna {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	padding-top: 100px;
-	width: 50%;
+	padding-top: 50px;
+	width: 30%;
 }
 button.dela {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	border-radius: 81px;
-	background: #55b9f3;
-	box-shadow: -26px -26px 51px #4494c2, 26px 26px 51px #66deff;
+	width: 450px;
+	height:50px;
+    display: block;
+	margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 81px;
+    background: #55b9f3;
+   
+}
+tooltip.tooltip bs-tooltip-top {
+  padding: 36px 47px;
+  border-radius: 11px;
+  background: #FF9E4A;
+  color: #0F0E0E;
+	
 }
 @media (max-width:768px) {
 	.fb-profile-text>h1 {
