lagt in inloggad css i style.css

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,184 @@
 .body{
+    font-family: 'Open Sans', sans-serif;
     background-color: white;
 }
+/*--- login/index.html---*/
+
+  
+  
+/*--- Profil---*/
+/*.fb-profile img.fb-image-lg {
+	z-index: 0;
+	width: 100%;
+	margin-bottom: 10px;
+	height: 250px;
+}
+.fb-image-profile {
+	margin: -90px 1120px 0px 600px;
+	z-index: 9;
+	width: 20%;
+	border-radius: 50%;
+}
+.adamoanna {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	padding-top: 100px;
+	width: 50%;
+}
+button.dela {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	border-radius: 81px;
+	background: #55b9f3;
+	box-shadow: -26px -26px 51px #4494c2, 26px 26px 51px #66deff;
+}*/
+
+
+/*--- Flöde ---*/
+
+body{margin-top:20px;}
+ Social feed
+.social-feed-separated .social-feed-box {
+  margin-left: 62px;
+}
+.social-feed-separated .social-avatar {
+  float: left;
+  padding: 0;
+}
+.social-feed-separated .social-avatar img {
+  width: 52px;
+  height: 52px;
+  border: 1px solid #e7eaec;
+}
+.social-feed-separated .social-feed-box .social-avatar {
+  padding: 15px 15px 0 15px;
+  float: none;
+}
+.social-feed-box {
+  padding: 15px;
+  border: 1px solid #e7eaec;
+  background: #fff;
+  margin-bottom: 15px;
+}
+.article .social-feed-box {
+  margin-bottom: 0;
+  border-bottom: none;
+}
+.article .social-feed-box:last-child {
+  margin-bottom: 0;
+  border-bottom: 1px solid #e7eaec;
+}
+.article .social-feed-box p {
+  font-size: 13px;
+  line-height: 18px;
+}
+.social-action {
+  margin: 15px;
+}
+.social-avatar {
+  padding: 15px 15px 0 15px;
+}
+.social-comment .social-comment {
+  margin-left: 45px;
+}
+.social-avatar img {
+  height: 40px;
+  width: 40px;
+  margin-right: 10px;
+}
+.social-avatar .media-body a {
+  font-size: 14px;
+  display: block;
+}
+.social-body {
+  padding: 15px;
+}
+.social-body img {
+  margin-bottom: 10px;
+}
+.social-footer {
+  border-top: 1px solid #e7eaec;
+  padding: 10px 15px;
+  background: #f9f9f9;
+}
+.social-footer .social-comment img {
+  width: 32px;
+  margin-right: 10px;
+}
+.social-comment:first-child {
+  margin-top: 0;
+}
+.social-comment {
+  margin-top: 15px;
+}
+.social-comment textarea {
+  font-size: 12px;
+}
+
+
+}
+.form-control, .single-line {
+    background-color: #FFFFFF;
+    background-image: none;
+    border: 1px solid #e5e6e7;
+    border-radius: 1px;
+    color: inherit;
+    display: block;
+    padding: 6px 12px;
+    transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;
+    width: 100%;
+    font-size: 14px;
+}
+
+
+.ibox {
+  clear: both;
+  margin-bottom: 25px;
+  margin-top: 0;
+  padding: 0;
+}
+.ibox.collapsed .ibox-content {
+  display: none;
+}
+.ibox.collapsed .fa.fa-chevron-up:before {
+  content: "\f078";
+}
+.ibox.collapsed .fa.fa-chevron-down:before {
+  content: "\f077";
+}
+.ibox:after,
+.ibox:before {
+  display: table;
+}
+.ibox-title {
+  -moz-border-bottom-colors: none;
+  -moz-border-left-colors: none;
+  -moz-border-right-colors: none;
+  -moz-border-top-colors: none;
+  background-color: #ffffff;
+  border-color: #e7eaec;
+  border-image: none;
+  border-style: solid solid none;
+  border-width: 3px 0 0;
+  color: inherit;
+  margin-bottom: 0;
+  padding: 14px 15px 7px;
+  min-height: 48px;
+}
+.ibox-content {
+  background-color: #ffffff;
+  color: inherit;
+  padding: 15px 20px 20px 20px;
+  border-color: #e7eaec;
+  border-image: none;
+  border-style: solid solid none;
+  border-width: 1px 0;
+}
+
+
+/*--- Contact ---*/
 .mb-1{
     background-color: tomato;
 }
@@ -37,6 +215,28 @@
     position:absolute;
   }
 
+/*--- Footer ---*/
+/*inloggad/flöde*/
+  .footer {
+    position: relative;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #2bbbad;
+    color: white;
+    text-align: center;
+    font-size: 90%;
+    padding: 10px 15px;
+  }
+  .ibox-footer {
+    color: inherit;
+    border-top: 1px solid #e7eaec;
+    font-size: 90%;
+    background: #ffffff;
+    padding: 10px 15px;
+  }
+
+  /*contact.html*/
   footer.footerLists{	
 	background: tomato;
 	/*color: #eaeaeb;*/
@@ -59,4 +259,17 @@ footer ul{
 }
 .listFooter li{
 	margin-top: 5px;
+}
+
+@media (max-width:768px) {
+	.fb-profile-text>h1 {
+		font-weight: 700;
+		font-size: 16px;
+		text-align: center;
+	}
+	.fb-image-profile {
+		margin: -45px 10px 0px 25px;
+		z-index: 9;
+		width: 20%;
+	}
 }
