--- a/inloggad.css
+++ b/inloggad.css
@@ -1,4 +1,4 @@
-
+/*
 body{margin-top:20px;}
  Social feed
 .social-feed-separated .social-feed-box {
@@ -154,4 +154,4 @@ body{margin-top:20px;}
   text-align: center;
   font-size: 90%;
   padding: 10px 15px;
-}
+}*/
