slagit ihop css filer

--- a/main.css
+++ b/main.css
@@ -234,19 +234,19 @@
 	margin-bottom: 10px;
 }
 
-form {
+/*form {
   padding: 0;
   border: 0;
   margin: 0;
     
-}
+}*/
 
-body {
+/*body {
 background-color: #eaede0;
 background: -webkit-linear-gradient(top left, #eaede0, #d2d4c9);
 background: -moz-linear-gradient(top left, #eaede0, #d2d4c9);
 background: -ms-linear-gradient(top left, #eaede0, #d2d4c9);
-}
+}*/
 
 /* Animate.css */
 
